--- a/webapp/package.json
+++ b/webapp/package.json
@@ -20,6 +20,7 @@
     "vue-hot-reload-api": "^2.0.7",
     "vue-html-loader": "^1.2.3",
     "vue-loader": "^10.0.2",
+    "vue-router": "^2.1.1",
     "vue-style-loader": "^1.0.0",
     "webpack": "^1.14.0",
     "webpack-dev-middleware": "^1.9.0",
